@@ -153,3 +153,5 @@ allow clients use of all 'L' keys.
 - Add example udev helper scripts to contrib directory.
 - API:	  Add NEVER_SELECT cmd to client API to enforce non-display on
 	  client-switch.  Used by G15Macro if available.
+- Debug:  Add segfault handler to libg15daemon_client to aid debugging
+	  clients.
